falta js de rick& morty y changemode

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <h3 class="aboutme">About Me</h3>
             <p class="profile">Hi to y'all! My name is Sofia Rojas, I am a Psychology student,and now I’m learning software development because I want to be a woman in tech and change my life. I see many succesful stories of hardwork,consistency and discipline,they ‘re super inspiring to me. In my free time I like to read,listen music (mostly english pop and kpop) and learn more about tech. </p>
 
-            <button >Hire me</button>
+            <button class="hire-me" >Hire me</button>
 
         </div>
 
