--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
                         <p class="title">Virtual assistant</p>
                         <p class="company">Freelancer</p>
                         <img class="logo" src="./img/logo.svg" alt="">
-                        <p class="description">Virtual assitant doing different tasks remote and online for clients.</p>
+                        <p class="description">Virtual assistant doing different tasks remote and online for clients.</p>
                     </div>
         </div>
     </section>
