--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./css/styles.css"> 
+    <!-- <link rel="stylesheet"  id="light-mode" href="./css/lightmode.css"> 
+    <link rel="stylesheet"  id="dark-mode" href="./css/darkmode.css">  -->
+ 
     <title>Home</title>
 
 </head>
@@ -19,15 +22,14 @@
             <li><a href="./Contact.html">Contact</a></li>
         </ul>
     </nav>
-    <button id="change-mode"><a> Change Mode </a></button>
-    <script src="./js/changemode.js"></script>
+    <button id="change-mode"><a> Change Mode</a></button>
 </header>
 
 <section>
     <div class="presentation">
         <p class="greeting">Hi, I am <span id="Amarillo">Sofia Rojas</span>👋</p>
         <p class="title">Psychology Student & Front end developer</p>
-        <P class="work-easier">I make your work easier And I love it</P>
+        <P class="work-easier">Dreams don't work unless you do.</P>
         <img src="./img/Avatar.svg" alt="">
     </div>
     
@@ -64,7 +66,7 @@
 <footer>
     <div class="box-dos">
         <p>Sofia Rojas</p>
-        <p>Psychology student & Front end developer</p>
+        <p>Psychology student & Front end developer junior</p>
     </div>
 
     <div class="box-tres">
@@ -92,5 +94,6 @@
         <a class="send-email" href="/index.html"><img src="./img/Vector (1).svg" alt=""></a>
     </div>
 </footer>
+<script href="./js/cambiomodo.js"></script>
 </body>
 </html>
