se borraron archivos css,falta js rick morty y change mode

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <section class="sectioncontact">
         <div class="principalJokes">
             <h5 class="smiletitle">SMILE!</h5>
-            <p class="readjoke">Let's read a dad joke lol</p>
+            <p class="readjoke">Let's read a bad joke lol</p>
             <div class="jokesbox" id="cajachiste"> 
             <div id="chiste"></div>
             <div id="respuesta"></div>
