--- a/experience.html
+++ b/experience.html
@@ -27,18 +27,19 @@
         <div class="experience1">
             <div class="experiencebox">
                 <p class="title">Random jokes</p>
-                <p class="company"><a href="https://www.instagram.com/wwcodemedellin"> Women Who Code Medellin</a></p>
+                <p class="company"><a href="https://www.instagram.com/wwcodemedellin" id="wwcodemedellin"> Women Who Code Medellin</a></p>
                 <img class="logo" src="./img/WWCode_Medellin_Black 2.svg" alt="">
                 <p class="description">Hello, World! 
-                    I’ve completed a 32 hour training designed by Women Who Code Medellin and this website is the result of each lesson. I used HTML5, CSS3 and JS and I also called an APi so you can have a laugh. Take a look at my Contact page <a href="./contact.html">here</a> to enjoy it! </p>
+                    I’ve completed a 32 hour training designed by Women Who Code Medellin and this website is the result of each lesson. I used HTML5, CSS3 and JS and I also called an APi so you can have a laugh. Take a look at my Contact page <a href="./contact.html" id="wwcodemedellin">here</a> to enjoy it! </p>
             </div>
             <div class="experience1">
                 <div class="experiencebox">
                     <p class="title">Rick & Morty</p>
-                    <p class="company"><a href="https://www.instagram.com/wwcodemedellin"> WWC Medellin - 1st project</a></p>
+                    <p class="company"><a href="https://www.instagram.com/wwcodemedellin"
+                        id="wwcodemedellin"> WWC Medellin - 1st project</a></p>
                     <img class="logo" src="./img/WWCode_Medellin_Black 2.svg" alt="">
                     <p class="description">Once my CV was ready, I was able to go a little bit further. I started a must have project for each wannabe developer: a Rick & Morty Website.
-                        I received a Figma Designed and created this project from scratch, using HTML5, CSS3, JS and, of course, the Rick and Morty APi. <a href="./rickandmorty.html">Let’s go!</a>
+                        I received a Figma Designed and created this project from scratch, using HTML5, CSS3, JS and, of course, the Rick and Morty APi. <a href="./rickandmorty.html" class="rickmorty">Let’s go!</a>
                         </p>
                 </div>
                 <div class="experience1">
