--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css"> 
-    <!-- <link rel="stylesheet"  id="light-mode" href="./css/lightmode.css"> 
-    <link rel="stylesheet"  id="dark-mode" href="./css/darkmode.css">  -->
- 
+     <link rel="stylesheet" href="./css/styles.css"> 
+     <!-- <link rel="stylesheet"  id="dark-mode" href="./css/darkmode.css">
+     <link rel="stylesheet"  id="light-mode" href="./css/lightmode.css">  -->
     <title>Home</title>
 
 </head>
@@ -15,14 +14,14 @@
 <header>
     <img src="./img/Frame 7.svg" alt="">
     <nav>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./About.html">About</a></li>
-            <li><a href="./Experience.html">Experience</a></li>
-            <li><a href="./Contact.html">Contact</a></li>
-        </ul>
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="./About.html">About</a>
+            <a href="./Experience.html">Experience</a>
+            <a href="./Contact.html">Contact</a>
+        </nav>
     </nav>
-    <button id="change-mode"><a> Change Mode</a></button>
+    <button id="changemode"> Change Mode</button>
 </header>
 
 <section>
