--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./CSS/about.css">
     <title>About</title>
 </head>
-<script src="./js/changemode.js"></script>
 <body>
     <header>
         <img src="./img/Frame 7.svg" alt="">
@@ -17,7 +16,7 @@
             <a href="./Experience.html">Experience</a>
             <a href="./Contact.html">Contact</a>
         </nav>
-        <button id="change-mode"><a> Change Mode </a></button>
+        <button id="changemode">Change Mode </button>
     </header>
 
     <section class="about">
@@ -67,5 +66,6 @@
             <a class="send-email" href="/index.html"><img src="./img/Vector (1).svg" alt=""></a>
         </div>
     </footer>
+    <script src="./js/changemode.js"></script>
     </body>
     </html>
