--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,15 @@
 </head>
 <script src="./js/changemode.js"></script>
 <body>
-    <header>
-        <img src="./img/Frame 7.png" alt="">
+    <<header>
+        <img src="./img/Frame 7.svg" alt="">
         <nav>
             <a href="./index.html">Home</a>
             <a href="./About.html">About</a>
             <a href="./Experience.html">Experience</a>
             <a href="./Contact.html">Contact</a>
         </nav>
-        <button class="change-mode"><a> Change Mode </a></button>
+        <button id="changemode">Change Mode </button>
     </header>
 
     <section class="sectioncontact">
