--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
             <a href="./Experience.html">Experience</a>
             <a href="./Contact.html">Contact</a>
         </nav>
-        <button id="change-mode"><a> Change Mode </a></button>
+        <button id="changemode">Change Mode</button>
     </header>
 
     <section>
@@ -84,5 +84,6 @@
             <a class="send-email" href="/index.html"><img src="./img/Vector (1).svg" alt=""></a>
         </div>
     </footer>
+    <script src="./js/changemode.js"></script>
     </body>
     </html>
