--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./css/styles.css"> 
-     <!-- <link rel="stylesheet"  id="dark-mode" href="./css/darkmode.css">
-     <link rel="stylesheet"  id="light-mode" href="./css/lightmode.css">  -->
     <title>Home</title>
 
 </head>
@@ -14,12 +12,12 @@
 <header>
     <img src="./img/Frame 7.svg" alt="">
     <nav>
-        <nav>
+        <ul>
             <a href="./index.html">Home</a>
             <a href="./About.html">About</a>
             <a href="./Experience.html">Experience</a>
             <a href="./Contact.html">Contact</a>
-        </nav>
+        </ul>
     </nav>
     <button id="changemode"> Change Mode</button>
 </header>
@@ -93,6 +91,6 @@
         <a class="send-email" href="/index.html"><img src="./img/Vector (1).svg" alt=""></a>
     </div>
 </footer>
-<script href="./js/cambiomodo.js"></script>
+<script href="./js/changemode.js"></script>
 </body>
 </html>
