change mode listo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Home</title>
 
 </head>
-<body>
-<header>
+<body class="body">
+    <header>
     <img src="./img/Frame 7.svg" alt="">
     <nav>
         <ul>
-            <a href="./index.html">Home</a>
-            <a href="./About.html">About</a>
-            <a href="./Experience.html">Experience</a>
-            <a href="./Contact.html">Contact</a>
+            <a class="nav1" href="./index.html">Home</a>
+            <a class="nav1"  href="./About.html" >About</a>
+            <a class="nav1"  href="./Experience.html">Experience</a>
+            <a class="nav1"  href="./Contact.html">Contact</a>
         </ul>
     </nav>
     <button id="changemode"> Change Mode</button>
@@ -24,9 +24,9 @@
 
 <section>
     <div class="presentation">
-        <p class="greeting">Hi, I am <span id="Amarillo">Sofia Rojas</span>👋</p>
-        <p class="title">Psychology Student & Front end developer</p>
-        <P class="work-easier">Dreams don't work unless you do.</P>
+        <h2 class="greeting">Hi, I am <span id="Amarillo">Sofia Rojas</span>👋</h2>
+        <h1 class="title">Psychology Student & Front end developer</h1>
+        <h4 class="work-easier">Dreams don't work unless you do.</h4>
         <img src="./img/Avatar.svg" alt="">
     </div>
     
@@ -34,8 +34,8 @@
         <div class="box-uno">
             <img src="./img/experience-logo.svg" alt="">
             <div class="text">
-                <p>5+</p>
-                <p>Years Of Experience</p>
+                <p class="textos">5+</p>
+                <p class="textos">Years Of Experience</p>
             </div>
             <img class="flecha" src="./img/flecha.svg" alt="">
             
@@ -43,16 +43,16 @@
         <div class="box-uno">
             <img src="./img/experience-logo.svg" alt="">
             <div class="text">
-                <p>100+</p>
-                <p>Completed Projects</p>
+                <p class="textos">100+</p>
+                <p class="textos">Completed Projects</p>
             </div>
                 <img class="flecha" src="./img/flecha.svg" alt="">
         </div>
         <div class="box-uno">
             <img src="./img/clients-logo.svg" alt="">
             <div class="text">
-                <p>50++</p>
-                <p>Happy Clients</p>
+                <p class="textos">50++</p>
+                <p class="textos">Happy Clients</p>
             </div>
             <img class="flecha" src= "./img/flecha.svg".alt="">
         </div>
@@ -62,38 +62,35 @@
 
 <footer>
     <div class="box-dos">
-        <p>Sofia Rojas</p>
-        <p>Psychology student & Front end developer junior</p>
+        <p class="textos">Sofia Rojas</p>
+        <p class="textos">Psychology student & Front end developer junior</p>
     </div>
 
     <div class="box-tres">
-        <p>Useful Links</p>
+        <p class="textos">Useful Links</p>
         <li>
-            <a href="./index.html">Home</a>
-            <a href="./About.html">About</a>
-            <a href="./Experience.html">Experience</a>
-            <a href="./Contact.html">Contact</a>
+            <a class="nav1"  href="./index.html">Home</a>
+            <a class="nav1"  href="./About.html" >About</a>
+            <a class="nav1"  href="./Experience.html">Experience</a>
+            <a class="nav1"  href="./Contact.html">Contact</a>
         </li>
         </div>
     <div class="box-tres">
-        <p>Social Media</p>
+        <p class="textos">Social Media</p>
         <li>
-            <a href="https://www.linkedin.com">LinkedIn</a>
-            <a href="https://github.com/">Github</a>
-            <a href="https://www.instagram.com/">Instagram</a>
+            <a class="nav" href="https://www.linkedin.com">LinkedIn</a>
+            <a class="nav"href="https://github.com/">Github</a>
+            <a  class="nav"href="https://www.instagram.com/">Instagram</a>
         </li>
     </div>
     <div class="box-tres">
-        <p>Hire Me</p>
-        <p>Enter your email to get my portafolio and CV</p>
+        <p class="textos">Hire Me</p>
+        <p class="textos">Enter your email to get my portafolio and CV</p>
 
         <input class="write-email"  type="text" placeholder="Write your email">
         <a class="send-email" href="/index.html"><img src="./img/Vector (1).svg" alt=""></a>
     </div>
 </footer>
-<<<<<<< HEAD
-<script href="./js/changemode.js"></script>
-=======
->>>>>>> origin/master
+<script src="./js/changemode.js"></script>
 </body>
 </html>
