rick y morty listo,sujeto a modificacion

--- a/rickandmorty.html
+++ b/rickandmorty.html
@@ -48,7 +48,12 @@
             </ul>
         </nav>
     </div>
+    <section class="container">
+        <p class="message"> Choose any of the categories above 
+        and learn more about Rick and Morty characters.</p>
 
+        <div class="characters-container">
+    </section> 
     <footer>
         <div>
             <span id="nombre-blanco"> Sofia Rojas</span>
