--- a/html/experience.html
+++ b/html/experience.html
@@ -13,9 +13,9 @@
     <nav>
         <ul>
             <a class="nav1" href="./index.html">Home</a>
-            <a class="nav1"  href="./About.html" >About</a>
-            <a class="nav1"  href="./Experience.html">Experience</a>
-            <a class="nav1"  href="./Contact.html">Contact</a>
+            <a class="nav1"  href="./about.html" >About</a>
+            <a class="nav1"  href="./experience.html">Experience</a>
+            <a class="nav1"  href="./contact.html">Contact</a>
         </ul>
     </nav>
     <button id="changemode"> Change Mode</button>
@@ -64,9 +64,9 @@
             <p class="textos">Useful Links</p>
             <li>
                 <a class="nav"  href="./index.html">Home</a>
-                <a class="nav"  href="./About.html" >About</a>
-                <a class="nav"  href="./Experience.html">Experience</a>
-                <a class="nav"  href="./Contact.html">Contact</a>
+                <a class="nav"  href="./about.html" >About</a>
+                <a class="nav"  href="./experience.html">Experience</a>
+                <a class="nav"  href="./contact.html">Contact</a>
             </li>
             </div>
         <div class="box-tres">
