--- a/html/about.html
+++ b/html/about.html
@@ -13,9 +13,9 @@
         <nav>
         <ul>
             <a class="nav1" href="./index.html">Home</a>
-            <a class="nav1"  href="./About.html" >About</a>
-            <a class="nav1"  href="./Experience.html">Experience</a>
-            <a class="nav1"  href="./Contact.html">Contact</a>
+            <a class="nav1"  href="./about.html" >About</a>
+            <a class="nav1"  href="./experience.html">Experience</a>
+            <a class="nav1"  href="./contact.html">Contact</a>
         </ul>
         </nav>
         <button id="changemode">Change Mode </button>
@@ -44,9 +44,9 @@
             <p class="textos">Useful Links</p>
             <li>
                 <a class="nav1"  href="./index.html">Home</a>
-                <a class="nav1"  href="./About.html" >About</a>
-                <a class="nav1"  href="./Experience.html">Experience</a>
-                <a class="nav1"  href="./Contact.html">Contact</a>
+                <a class="nav1"  href="./about.html" >About</a>
+                <a class="nav1"  href="./experience.html">Experience</a>
+                <a class="nav1"  href="./contact.html">Contact</a>
             </li>
             </div>
         <div class="box-tres">
