--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/contact.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <title>Contact</title>
 </head>
     <body class="body">
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <a class="nav1" href="./index.html">Home</a>
-                <a class="nav1"  href="./About.html" >About</a>
-                <a class="nav1"  href="./Experience.html">Experience</a>
-                <a class="nav1"  href="./Contact.html">Contact</a>
+                <a class="nav1"  href="./about.html" >About</a>
+                <a class="nav1"  href="./experience.html">Experience</a>
+                <a class="nav1"  href="./contact.html">Contact</a>
             </ul>
         </nav>
         <button id="changemode"> Change Mode</button>
